chore: cleanup, reorganize, and add more comments

--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -3,25 +3,21 @@ name = "citycoin"
 
 # immutable contracts
 
-[contracts.citycoin-core]
-path = "contracts/clarinet/citycoin-core.clar"
-depends_on = ["citycoin-token", "citycoin-logic-trait"]
+[contracts.citycoin-vrf]
+path = "contracts/clarinet/citycoin-vrf.clar"
+depends_on = []
 
 [contracts.citycoin-token]
 path = "contracts/clarinet/citycoin-token.clar"
 depends_on = ["sip-010-trait"]
 
-[contracts.citycoin-vrf]
-path = "contracts/clarinet/citycoin-vrf.clar"
-depends_on = []
-
-[contracts.citycoin-lifecycle-trait]
-path = "contracts/clarinet/citycoin-lifecycle-trait.clar"
-depends_on = []
-
 [contracts.citycoin-logic-trait]
 path = "contracts/clarinet/citycoin-logic-trait.clar"
 depends_on = []
+
+[contracts.citycoin-core]
+path = "contracts/clarinet/citycoin-core.clar"
+depends_on = ["citycoin-token", "citycoin-logic-trait"]
 
 # upgradeable contracts
 
@@ -29,7 +25,7 @@ depends_on = []
 path = "contracts/clarinet/citycoin-logic-v1.clar"
 depends_on = ["citycoin-logic-trait", "citycoin-token", "citycoin-vrf", "citycoin-core"]
 
-# contracts listed below are used only in test suite
+# contracts listed below are used only in testing
 
 [contracts.sip-010-trait]
 path = "contracts/clarinet/sip-10-ft-standard.clar"
