fix: restore original token contract and create v2
Realized after the fact that we will need v1 and v2 to complete unit tests, so this creates a new v2 token contract for CCIP-008 and adds it to Clarinet.toml

--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -22,6 +22,10 @@ depends_on = ["citycoin-core-trait", "citycoin-token-trait"]
 path = "contracts/clarinet/citycoin-token.clar"
 depends_on = ["sip-010-trait", "citycoin-auth", "citycoin-token-trait"]
 
+[contracts.citycoin-token-v2]
+path = "contracts/clarinet/citycoin-token-v2.clar"
+depends_on = ["sip-010-trait", "citycoin-auth", "citycoin-token-trait", "citycoin-token"]
+
 [contracts.citycoin-core-v1]
 path = "contracts/clarinet/citycoin-core-v1.clar"
 depends_on = ["citycoin-auth", "citycoin-token", "citycoin-vrf", "citycoin-core-trait"]
