fix: add new test models and re-tool testing
The core contract is now testing for the v2 token values on coinbase thresholds, and a new model is added so token v1 and v2 can be tested alongside each other. It also adds a set of separate tests for token v2.

--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -28,7 +28,7 @@ depends_on = ["sip-010-trait", "citycoin-auth", "citycoin-token-trait", "citycoi
 
 [contracts.citycoin-core-v1]
 path = "contracts/clarinet/citycoin-core-v1.clar"
-depends_on = ["citycoin-auth", "citycoin-token", "citycoin-vrf", "citycoin-core-trait"]
+depends_on = ["citycoin-auth", "citycoin-token", "citycoin-token-v2", "citycoin-vrf", "citycoin-core-trait"]
 
 [contracts.citycoin-vote-v1]
 path = "contracts/clarinet/citycoin-vote-v1.clar"
