fix: add vrf-v2 to other contract dependencies

--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -28,7 +28,7 @@ depends_on = ["sip-010-trait", "citycoin-auth", "citycoin-token-trait"]
 
 [contracts.citycoin-core-v1]
 path = "contracts/clarinet/citycoin-core-v1.clar"
-depends_on = ["citycoin-auth", "citycoin-token", "citycoin-vrf", "citycoin-core-trait"]
+depends_on = ["citycoin-auth", "citycoin-token", "citycoin-vrf", "citycoin-vrf-v2", "citycoin-core-trait"]
 
 [contracts.citycoin-vote-v1]
 path = "contracts/clarinet/citycoin-vote-v1.clar"
@@ -46,11 +46,11 @@ depends_on = ["citycoin-core-v1"]
 
 [contracts.citycoin-core-v2]
 path = "contracts/clarinet/citycoin-core-v2.clar"
-depends_on = ["citycoin-auth", "citycoin-token", "citycoin-vrf", "citycoin-core-trait"]
+depends_on = ["citycoin-auth", "citycoin-token", "citycoin-vrf", "citycoin-vrf-v2", "citycoin-core-trait"]
 
 [contracts.citycoin-core-v3]
 path = "contracts/clarinet/citycoin-core-v2.clar"
-depends_on = ["citycoin-auth", "citycoin-token", "citycoin-vrf", "citycoin-core-trait"]
+depends_on = ["citycoin-auth", "citycoin-token", "citycoin-vrf", "citycoin-vrf-v2", "citycoin-core-trait"]
 
 [contracts.sip-010-trait]
 path = "contracts/clarinet/sip-10-ft-standard.clar"
