--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -5,6 +5,15 @@ coverage:
   precision: 2
   round: down
   range: "70...100"
+  status:
+    project:
+      default:
+        target: auto
+        threshold: 5%
+        base: auto
+        branches:
+          - main
+          - develop
 
 parsers:
   gcov:
@@ -17,10 +26,10 @@ parsers:
 comment:
   layout: "reach,diff,flags,files,footer"
   behavior: default
-  require_changes: no
+  require_changes: false
   require_base: no
-  require_head: no
+  require_head: yes
 
 ignore:
-  - "contracts/citycoin-tardis-v1.clar"
-  - "contracts/citycoin-core-v2.clar"
+  - "*mainnet/*"
+  - "*testnet/*"
