--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -17,7 +17,7 @@ depends_on = ["miamicoin-auth", "miamicoin-token", "citycoin-vrf", "citycoin-cor
 
 [contracts.miamicoin-token]
 path = "contracts/cities/mia/local/miamicoin-token.clar"
-depends_on = ["sip-010-trait", "miamicoin-auth", "citycoin-token-trait"]
+depends_on = ["sip-010-trait-ft-standard", "miamicoin-auth", "citycoin-token-trait"]
 
 [contracts.newyorkcitycoin-auth]
 path = "contracts/cities/nyc/local/newyorkcitycoin-auth.clar"
@@ -29,7 +29,7 @@ depends_on = ["newyorkcitycoin-auth", "newyorkcitycoin-token", "citycoin-vrf", "
 
 [contracts.newyorkcitycoin-token]
 path = "contracts/cities/nyc/local/newyorkcitycoin-token.clar"
-depends_on = ["sip-010-trait", "newyorkcitycoin-auth", "citycoin-token-trait"]
+depends_on = ["sip-010-trait-ft-standard", "newyorkcitycoin-auth", "citycoin-token-trait"]
 
 # core
 
@@ -47,7 +47,7 @@ depends_on = ["citycoin-core-trait", "citycoin-token-trait"]
 
 [contracts.citycoin-token]
 path = "contracts/core/local/citycoin-token.clar"
-depends_on = ["sip-010-trait", "citycoin-auth", "citycoin-token-trait"]
+depends_on = ["sip-010-trait-ft-standard", "citycoin-auth", "citycoin-token-trait"]
 
 [contracts.citycoin-core-v1]
 path = "contracts/core/local/citycoin-core-v1.clar"
@@ -73,8 +73,8 @@ depends_on = ["citycoin-core-v1"]
 
 # utilities
 
-[contracts.sip-010-trait]
-path = "contracts/utilities/local/sip-10-ft-standard.clar"
+[contracts.sip-010-trait-ft-standard]
+path = "contracts/utilities/local/sip-010-trait-ft-standard.clar"
 depends_on = []
 
 [contracts.test-utils]
