--- a/settings/Devnet.toml
+++ b/settings/Devnet.toml
@@ -46,7 +46,12 @@ balance = 1_000_000_000
 mnemonic = "east load echo merit ignore hip tag obvious truly adjust smart panther deer aisle north hotel process frown lock property catch bless notice topple"
 balance = 1_000_000_000
 
-[accounts.city_wallet]
+[accounts.mia_wallet]
 # STFCVYY1RJDNJHST7RRTPACYHVJQDJ7R1DWTQHQA
 mnemonic = "market ocean tortoise venue vivid coach machine category conduct enable insect jump fog file test core book chaos crucial burst version curious prosper fever"
 balance = 0
+
+[accounts.nyc_wallet]
+# STEB8ZW46YZJ40E3P7A287RBJFWPHYNQ2AB5ECT8
+mnemonic = "east load echo merit ignore hip tag obvious truly adjust smart panther deer aisle north hotel process frown lock property catch bless notice topple"
+balance = 1_000_000
