fix: add quick ls to view GH dir structure

--- a/.github/workflows/test-contract.yaml
+++ b/.github/workflows/test-contract.yaml
@@ -21,6 +21,9 @@ jobs:
     steps:
       - name: "Checkout code"
         uses: actions/checkout@v2
+      - name: "Show directory structure (debug)"
+        run: |
+          ls -Rlh
       - name: "Check contract syntax"
         uses: docker://hirosystems/clarinet:latest
         with:
