--- a/.github/workflows/test-contract.yaml
+++ b/.github/workflows/test-contract.yaml
@@ -21,20 +21,10 @@ jobs:
     steps:
       - name: "Checkout code"
         uses: actions/checkout@v2
-      - name: "Show directory structure (debug)"
-        run: |
-          ls -Rlh
       - name: "Check contract syntax"
         uses: docker://hirosystems/clarinet:latest
         with:
           args: check
-      - name: "Execute core tests"
-        uses: docker://hirosystems/clarinet:latest
-        with:
-          args: test --coverage tests/core/
-      - name: "Rename core coverage file"
-        run: |
-          mv coverage.lcov core-coverage.lcov
       - name: "Execute MIA tests"
         uses: docker://hirosystems/clarinet:latest
         with:
@@ -49,6 +39,34 @@ jobs:
       - name: "Rename NYC coverage file"
         run: |
           mv coverage.lcov nyc-coverage.lcov
+      - name: "Execute core tests"
+        uses: docker://hirosystems/clarinet:latest
+        with:
+          args: test --coverage tests/core/
+      - name: "Rename core coverage file"
+        run: |
+          mv coverage.lcov core-coverage.lcov
+      - name: "Execute tardis tests"
+        uses: docker://hirosystems/clarinet:latest
+        with:
+          args: test --coverage tests/tardis/
+      - name: "Rename tardis coverage file"
+        run: |
+          mv coverage.lcov tardis-coverage.lcov
+      - name: "Execute utility tests"
+        uses: docker://hirosystems/clarinet:latest
+        with:
+          args: test --coverage tests/utility/
+      - name: "Rename utility coverage file"
+        run: |
+          mv coverage.lcov utility-coverage.lcov
+      - name: "Execute vote tests"
+        uses: docker://hirosystems/clarinet:latest
+        with:
+          args: test --coverage tests/vote/
+      - name: "Rename vote coverage file"
+        run: |
+          mv coverage.lcov vote-coverage.lcov
       - name: "Combine code coverage files"
         run: |
           ls -Rlh *.lcov
