--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -14,6 +14,13 @@ coverage:
         branches:
           - main
           - develop
+    patch:
+      target: auto
+      threshold: 5%
+      base: auto
+      branches:
+        - main
+        - develop
 
 parsers:
   gcov:
