--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -20,11 +20,42 @@ contract_id = "SP2H8PY27SEZ03MWRKS5XABZYQN17ETGQS3527SA5.newyorkcitycoin-token"
 [[project.requirements]]
 contract_id = "SP2H8PY27SEZ03MWRKS5XABZYQN17ETGQS3527SA5.newyorkcitycoin-core-v1"
 
+[[project.requirements]]
+contract_id = "SP2NS7CNBBN3S9J6M4JJHT7WNBETRSBZ9KPVRENBJ.citycoin-tardis-v2"
+
 # contracts listed below are already deployed
 # and added only to ensure clarinet check passes
+# a syntax check - no other tests are run
+
+[contracts.miamicoin-auth-mainnet]
+path = "contracts/cities/mia/mainnet/miamicoin-auth.clar"
+depends_on = []
+[contracts.miamicoin-core-v1-mainnet]
+path = "contracts/cities/mia/mainnet/miamicoin-core-v1.clar"
+depends_on = []
+[contracts.miamicoin-token-mainnet]
+path = "contracts/cities/mia/mainnet/miamicoin-token.clar"
+depends_on = []
+
+[contracts.newyorkcitycoin-auth-mainnet]
+path = "contracts/cities/nyc/mainnet/newyorkcitycoin-auth.clar"
+depends_on = []
+[contracts.newyorkcitycoin-core-v1-mainnet]
+path = "contracts/cities/nyc/mainnet/newyorkcitycoin-core-v1.clar"
+depends_on = []
+[contracts.newyorkcitycoin-token-mainnet]
+path = "contracts/cities/nyc/mainnet/newyorkcitycoin-token.clar"
+depends_on = []
 
 [contracts.citycoin-tardis-v1-mainnet]
-path = "contracts/tardis/mainnet/citycoin-tardis-v1-mainnet.clar"
+path = "contracts/tardis/mainnet/citycoin-tardis-v1.clar"
+depends_on = []
+[contracts.citycoin-tardis-v2-mainnet]
+path = "contracts/tardis/mainnet/citycoin-tardis-v2.clar"
+depends_on = []
+
+[contracts.citycoin-vote-v1-mainnet]
+path = "contracts/vote/mainnet/citycoins-vote-v1.clar"
 depends_on = []
 
 # all contracts below are used with the testing suite
