--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -39,7 +39,7 @@ comment:
   require_head: yes
 
 ignore:
-  - "*mainnet/*"
-  - "*testnet/*"
+  - "**/mainnet/*"
+  - "**/testnet/*"
   - "contracts/tardis/local/citycoin-tardis-v1.clar"
   - "contracts/core/local/citycoin-core-v2.clar"
