fix: update package.json test scripts
This change introduces a tiered structure to running tests, with several scripts that help split up tests to prevent runtime OOM issues. Each tier allows running all tests beneath it with the top-level test script running all tests for all tiers.

--- a/package.json
+++ b/package.json
@@ -3,20 +3,29 @@
   "version": "1.1.0",
   "description": "A smart contract implementation of the Proof of Transfer consensus mechanism, allowing for the mining and Stacking of a new fungible token on the Stacks blockchain with a portion of miner rewards going to a custodied account for a city to claim the protocol contribution.",
   "scripts": {
-    "test": "clarinet test",
-    "test:mia": "clarinet test ./tests/cities/mia",
-    "test:nyc": "clarinet test ./tests/cities/nyc",
-    "test:auth": "clarinet test ./tests/core/citycoin-auth*",
-    "test:core": "clarinet test ./tests/core/citycoin-core*",
-    "test:token": "clarinet test ./tests/core/citycoin-token*",
-    "test:tardis": "clarinet test ./tests/tardis/*",
-    "test:utils": "clarinet test ./tests/utilities/*",
-    "test:vote": "clarinet test ./tests/vote/*",
+    "console": "clarinet console",
+    "test": "npm run test:cities && npm run test:base && npm run test:misc",
+    "test:cities": "npm run test:mia && npm run test:nyc",
+    "test:mia": "npm run test:mia:auth && npm run test:mia:core && npm run test:mia:token",
+    "test:mia:auth": "clarinet test ./tests/cities/mia/auth",
+    "test:mia:core": "clarinet test ./tests/cities/mia/core",
+    "test:mia:token": "clarinet test ./tests/cities/mia/token",
+    "test:nyc": "npm run test:nyc:auth && npm run test:nyc:core && npm run test:nyc:token",
+    "test:nyc:auth": "clarinet test ./tests/cities/nyc/auth",
+    "test:nyc:core": "clarinet test ./tests/cities/nyc/core",
+    "test:nyc:token": "clarinet test ./tests/cities/nyc/token",
+    "test:base": "npm run test:base:auth && npm run test:base:core && npm run test:base:token",
+    "test:base:auth": "clarinet test ./tests/core/citycoin-auth*",
+    "test:base:core": "clarinet test ./tests/core/citycoin-core*",
+    "test:base:token": "clarinet test ./tests/core/citycoin-token*",
+    "test:misc": "npm run test:misc:tardis && npm run test:misc:utils && npm run test:misc:vote",
+    "test:misc:tardis": "clarinet test ./tests/tardis/*",
+    "test:misc:utils": "clarinet test ./tests/utilities/*",
+    "test:misc:vote": "clarinet test ./tests/vote/*",
     "clarinet:check": "clarinet check",
     "clarinet:codecov": "clarinet test --coverage",
+    "clarinet:console": "clarinet console",
     "clarinet:costs": "clarinet test --costs",
-    "clarinet:test": "clarinet test",
-    "console": "clarinet console",
-    "clarinet:console": "clarinet console"
+    "clarinet:test": "clarinet test"
   }
 }
