--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -72,11 +72,11 @@ depends_on = ["citycoin-core-trait", "citycoin-token-trait"]
 path = "contracts/cities/mia/local/miamicoin-core-v1.clar"
 depends_on = ["miamicoin-auth", "miamicoin-token", "citycoin-vrf", "citycoin-core-trait"]
 
-[contract.miamicoin-core-v1-1]
+[contracts.miamicoin-core-v1-1]
 path = "contracts/cities/mia/local/miamicoin-core-v1.clar"
 depends_on = ["miamicoin-auth", "miamicoin-token", "citycoin-vrf", "citycoin-core-trait"]
 
-[contract.miamicoin-core-v1-2]
+[contracts.miamicoin-core-v1-2]
 path = "contracts/cities/mia/local/miamicoin-core-v1.clar"
 depends_on = ["miamicoin-auth", "miamicoin-token", "citycoin-vrf", "citycoin-core-trait"]
 
