--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "test:cities": "npm run test:mia && npm run test:nyc",
     "test:mia": "npm run test:mia:auth && npm run test:mia:core && npm run test:mia:token",
     "test:mia:auth": "clarinet test ./tests/cities/mia/auth",
-    "test:mia:core": "clarinet test ./tests/cities/mia/core",
+    "test:mia:core": "npm run test:mia:core:v1 && npm run test:mia:core:v2",
+    "test:mia:core:v1": "clarinet test ./tests/cities/mia/core/core-v1",
+    "test:mia:core:v2": "clarinet test ./tests/cities/mia/core/core-v2",
     "test:mia:token": "clarinet test ./tests/cities/mia/token",
     "test:nyc": "npm run test:nyc:auth && npm run test:nyc:core && npm run test:nyc:token",
     "test:nyc:auth": "clarinet test ./tests/cities/nyc/auth",
-    "test:nyc:core": "clarinet test ./tests/cities/nyc/core",
+    "test:nyc:core": "npm run test:nyc:core:v1 && npm run test:nyc:core:v2",
+    "test:nyc:core:v1": "clarinet test ./tests/cities/nyc/core/core-v1",
+    "test:nyc:core:v2": "clarinet test ./tests/cities/nyc/core/core-v2",
     "test:nyc:token": "clarinet test ./tests/cities/nyc/token",
     "test:base": "npm run test:base:auth && npm run test:base:core && npm run test:base:token",
     "test:base:auth": "clarinet test ./tests/core/citycoin-auth*",
