--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "test:nyc:core:v2": "clarinet test ./tests/cities/nyc/core/core-v2",
     "test:nyc:token": "clarinet test ./tests/cities/nyc/token",
     "test:base": "npm run test:base:auth && npm run test:base:core && npm run test:base:token",
-    "test:base:auth": "clarinet test ./tests/core/citycoin-auth*",
-    "test:base:core": "clarinet test ./tests/core/citycoin-core*",
-    "test:base:token": "clarinet test ./tests/core/citycoin-token*",
+    "test:base:auth": "clarinet test ./tests/base/auth",
+    "test:base:core": "clarinet test ./tests/base/core",
+    "test:base:token": "clarinet test ./tests/base/token",
     "test:misc": "npm run test:misc:tardis && npm run test:misc:utils && npm run test:misc:vote",
     "test:misc:tardis": "clarinet test ./tests/tardis/*",
     "test:misc:utils": "clarinet test ./tests/utilities/*",
