fix: update vrf err message to fix runtime error
This fixes the vrf contract to use a different name than "err" for the error branch of the match. This is technically valid code, but more context can be found in the related issues linked in this PR.

--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "test:base:auth": "clarinet test ./tests/base/auth",
     "test:base:core": "clarinet test ./tests/base/core",
     "test:base:token": "clarinet test ./tests/base/token",
-    "test:misc": "npm run test:misc:tardis && npm run test:misc:utils && npm run test:misc:vote",
-    "test:misc:tardis": "clarinet test ./tests/tardis/*",
-    "test:misc:utils": "clarinet test ./tests/utilities/*",
-    "test:misc:vote": "clarinet test ./tests/vote/*",
+    "test:misc": "npm run test:misc:tardis && npm run test:misc:utils && npm run test:misc:vote && npm run test:misc:vrf",
+    "test:misc:tardis": "clarinet test ./tests/tardis/",
+    "test:misc:utils": "clarinet test ./tests/utilities/",
+    "test:misc:vote": "clarinet test ./tests/vote/",
+    "test:misc:vrf": "clarinet test ./tests/vrf/",
     "clarinet:check": "clarinet check",
     "clarinet:codecov": "clarinet test --coverage",
     "clarinet:console": "clarinet console",
